test_files/valid/ComplexExpression.java
public class ComplexExpression {
    public static void main(String[] args) {
        System.out.println((1 + 2) * 3 - 4);
        if (true) {
            System.out.println(42);
        } else {
            System.out.println(0);
        }
    }
} 