test_files/syntax_errors/MissingBrace.java
public class MissingBrace {
    public static void main(String[] args) {
        System.out.println(10); //@error - syntax (missing closing brace)
    }
} 